--- a/src/Api/appsettings.Development.json
+++ b/src/Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=AgendaManagerDev;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=db.hlcyavmwwvssaehaihuc.supabase.co;Port=5432;Database=postgres;Username=postgres;Password=Ga@77142153;Ssl Mode=Require;Trust Server Certificate=true"
   },
   "Logging": {
     "LogLevel": {
